--- a/oddsea/app/globals.css
+++ b/oddsea/app/globals.css
@@ -1,109 +1,11 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+.main-container {
+  font-family: Tahoma;
+  width: 45em;
+  margin: 0 auto;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+ul {
+  list-style-type: none;
 }
 
 .navbar {
@@ -140,4 +42,112 @@ a {
 
 .navbar-item {
   padding: 50px;
+}
+
+.calculator {
+  background-color: #e8ecf3;
+  height: 20em;
+}
+
+.calc-intro-box {
+  margin-bottom: 20px;
+}
+
+.calc-head {
+  font-size: 36px;
+  margin-bottom: 0px;
+}
+
+.calc-info {
+  margin: 0 2em -10px 2em;
+  padding-top: 35px;
+}
+
+.info-span {
+  padding-left: 80px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.info-span:first-of-type {
+  padding-left: 95px;
+}
+
+.odds1 {
+  text-align: center;
+  font-size: 15px;
+  margin: 2em 0 1em 2em ;
+  width: 105px;
+  height: 40px;
+  border: 1px solid #d1d7db;
+}
+
+.odds1::placeholder {
+  color: #d1d7db;
+}
+
+.odds2 {
+  text-align: center;
+  font-size: 15px;
+  margin: 0 0 2em 2em;
+  width: 105px;
+  height: 40px;
+  border: 1px solid #d1d7db;
+}
+
+.odds2::placeholder {
+  color: #d1d7db;
+}
+
+.calc-outputs {
+  display: inline-block;
+}
+
+.calc-label {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.output-span {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 110px;
+  height: 42px;
+  box-sizing: border-box;
+  background-color: #d1d7db;
+  margin: 0 0 0 2em;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.totals {  
+  position: relative;
+  margin: 75px 25px 0 0;
+}
+
+.row {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.margin {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-left: 25px;
+  width: 220px;
+  height: 45px;
+  box-sizing: border-box;
+  background-color: #0b1422;
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+}
+
+.calc-footer {
+  display: inline-block;
+  margin-top: 20px;
 }
