--- a/oddsea/styles/globals.css
+++ b/oddsea/styles/globals.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
-  font-family: Tahoma;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
 }
 
 ul {
