--- a/oddsea/styles/globals.css
+++ b/oddsea/styles/globals.css
@@ -1,10 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
   font-family: 'Roboto', sans-serif;
-  font-weight: 400;
+  color: #262b44;
 }
 
 ul {
   list-style-type: none;
+}
+
+input:focus {
+  outline: none;
 }
