--- a/oddsea/styles/navbar.module.css
+++ b/oddsea/styles/navbar.module.css
@@ -1,6 +1,6 @@
 .navbar {
   text-align: center;
-  padding: 10px;
+  margin: 20px 0;
 }
 
 .calculators-dropdown {
@@ -11,7 +11,7 @@
 .calculators-menu {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: white;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -24,7 +24,7 @@
   display: block;
 }
 
-.calculators-menu a:hover {background-color: #f1f1f1}
+.calculators-menu a:hover {background-color: #e0e5ee}
 
 .calculators-dropdown:hover .calculators-menu {
   display: block;
