--- a/oddsea/styles/globals.css
+++ b/oddsea/styles/globals.css
@@ -1,10 +1,45 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap');
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #262b44;
+  padding: 0 0.25rem;
+}
+
+h1, h2 {
+  color: #000000;
+}
+
+p, aside {
+  line-height: 1.6rem;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0 0;
+}
+
+span {
+  border-radius: 5px;
+}
+
+input {
+  border-radius: 5px;
 }
 
 input:focus {
   outline: none;
+}
+
+input:placeholder {
+  color: #e0e5ee;
+}
+
+select {
+  color: #262b44;
+  font-weight: bold;
+  padding: 1em 1em;
+  background: #ffffff;
+  border: 1px solid #c0cbdc;
+  border-radius: 5px;
 }
